fix(theme): Fix box-shadow on Safari

--- a/packages/theme/src/theme/_visual-helpers.scss
+++ b/packages/theme/src/theme/_visual-helpers.scss
@@ -130,7 +130,7 @@
 			.btn {
 				&:hover,
 				&:focus {
-					box-shadow: 0 200px 100px -100px rgba(255, 255, 255, 0.12) inset;
+					box-shadow: 0 0 0 200px rgba(255, 255, 255, 0.12) inset;
 				}
 			}
 		}
@@ -170,7 +170,7 @@
 			&:hover {
 				&:not([aria-current]) {
 					background: none;
-					box-shadow: 0 200px 100px -100px rgba(255, 255, 255, 0.12) inset;
+					box-shadow: 0 0 0 200px rgba(255, 255, 255, 0.12) inset;
 				}
 			}
 		}
